--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "રાજા-રાણી-વજીર-ચોર",
-    "short_name": "RRVC Game",
+    "short_name": "Chor Shipahi",
     "description": "ગુજરાતી રાજા-રાણી-વજીર-ચોર મલ્ટિપ્લેયર ગેમ",
     "start_url": "/index.html",
     "display": "standalone",
