--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,20 @@
 {
-    "name": "રાજા-રાણી-વજીર-ચોર",
-    "short_name": "Chor Shipahi",
-    "description": "ગુજરાતી રાજા-રાણી-વજીર-ચોર મલ્ટિપ્લેયર ગેમ",
-    "start_url": "/index.html",
-    "display": "standalone",
-    "background_color": "#e8eaf6",
-    "theme_color": "#8a2be2",
-    "icons": [
-        {
-            "src": "/icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "ચોર સિપાહી ગેમ",
+  "short_name": "Chor Sipahi",
+  "icons": [
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#8a2be2",
+  "theme_color": "#8a2be2"
 }
