--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "ચોર સિપાહી ગેમ",
-  "short_name": "Chor Sipahi",
-  "icons": [
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#8a2be2",
-  "theme_color": "#8a2be2"
+  "name": "raja-rani-vazir-chor-game",
+  "version": "1.0.0",
+  "description": "Multiplayer Raja-Rani-Vazir-Chor game.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
+  }
 }
